...
const ThemeSwitch: React.FC = () => {
  const { isLightMode, toggleTheme } = useTheme();

  return (
    <label className="switch">
      <input 
        aria-label={isLightMode ? 'Use dark theme' : 'Use light theme'}
        className="theme-input" 
        type="checkbox" 
        checked={!isLightMode} 
        onChange={toggleTheme} 
      />
      <div className="slider round">
...
